2025-11-30T02:12:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19792437965 # 824
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-30
* notice: last 14d: unq all: 3 1650
* notice: prev accum: outdated-unq outdated-all / unq all: 2937 275807 / 2955 277538
* notice: next accum: outdated-unq outdated-all / unq all: 2939 275933 / 2956 277658
* notice: prev exec diff / last date diff / accum: unq all: +1 +120 -0 -75 / +1 +19 -0 -0 / 1 19
* notice: removed / changed dates: [2025-11-15] / [2025-11-16 2025-11-29 2025-11-30]

2025-11-29T01:57:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19777362866 # 823
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-29
* notice: last 14d: unq all: 4 1659
* notice: prev accum: outdated-unq outdated-all / unq all: 2936 275686 / 2954 277417
* notice: next accum: outdated-unq outdated-all / unq all: 2937 275807 / 2955 277538
* notice: prev exec diff / last date diff / accum: unq all: +1 +121 -0 -72 / +1 +23 -0 -0 / 1 23
* notice: removed / changed dates: [2025-11-14] / [2025-11-15 2025-11-28 2025-11-29]

2025-11-28T01:58:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19751913357 # 822
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-28
* notice: last 14d: unq all: 4 1663
* notice: prev accum: outdated-unq outdated-all / unq all: 2935 275565 / 2953 277296
* notice: next accum: outdated-unq outdated-all / unq all: 2936 275686 / 2954 277417
* notice: prev exec diff / last date diff / accum: unq all: +1 +121 -0 -68 / +1 +23 -0 -0 / 1 23
* notice: removed / changed dates: [2025-11-13] / [2025-11-14 2025-11-27 2025-11-28]

2025-11-27T01:58:37Z: