@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-11-18T01:59:28Z",
-  "count" : 120,
+  "timestamp" : "2025-12-01T02:26:37Z",
+  "count" : 45,
   "count_minmax" : [ 21, 120 ],
-  "count_decinc" : [ -0, +120 ],
+  "count_decinc" : [ -75, +120 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
