@@ -1,8 +1,8 @@
 {
   "timestamp" : "2025-12-01T02:26:37Z",
-  "count" : 123,
-  "count_minmax" : [ 19, 123 ],
-  "count_decinc" : [ -0, +123 ],
+  "count" : 8,
+  "count_minmax" : [ 8, 8 ],
+  "count_decinc" : [ -0, +8 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
