@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-11-30T02:12:17Z",
-  "count_outdated" : 275933,
-  "uniques_outdated" : 2939,
-  "count" : 277658,
-  "uniques" : 2956,
+  "timestamp" : "2025-12-01T02:26:37Z",
+  "count_outdated" : 276057,
+  "uniques_outdated" : 2940,
+  "count" : 277770,
+  "uniques" : 2957,
   "clones" : [
     {
-      "timestamp": "2025-11-16T00:00:00Z",
-      "count": 49,
-      "count_minmax": [ 19, 124 ],
-      "count_decinc": [ 75, 124 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2025-11-17T00:00:00Z",
-      "count": 120,
+      "count": 45,
       "count_minmax": [ 21, 120 ],
-      "count_decinc": [ 0, 120 ],
+      "count_decinc": [ 75, 120 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,18 @@
     },
     {
       "timestamp": "2025-11-30T00:00:00Z",
-      "count": 19,
-      "count_minmax": [ 19, 19 ],
-      "count_decinc": [ 0, 19 ],
+      "count": 123,
+      "count_minmax": [ 19, 123 ],
+      "count_decinc": [ 0, 123 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-01T00:00:00Z",
+      "count": 8,
+      "count_minmax": [ 8, 8 ],
+      "count_decinc": [ 0, 8 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
