@@ -1,3 +1,12 @@
+2025-12-01T02:26:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19809201091 # 825
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-01
+* notice: last 14d: unq all: 3 1638
+* notice: prev accum: outdated-unq outdated-all / unq all: 2939 275933 / 2956 277658
+* notice: next accum: outdated-unq outdated-all / unq all: 2940 276057 / 2957 277770
+* notice: prev exec diff / last date diff / accum: unq all: +1 +112 -0 -75 / +1 +8 -0 -0 / 1 8
+* notice: removed / changed dates: [2025-11-16] / [2025-11-17 2025-11-30 2025-12-01]
+
 2025-11-30T02:12:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19792437965 # 824
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-30
